--- a/dahsboard.html
+++ b/dahsboard.html
@@ -23,7 +23,7 @@
             <img src="Images\logo.svg" alt="logo" id="company">
             <img src="Images\search-icon.svg" alt="logo" id="search">
             <div id="searchtxt">Search</div>
-            <img src="Images\notification-icon.svg" alt="bell" id="notification">
+            <img src="Images\notification-icon.svg" alt="bell" id="notification">&nbsp;&nbsp;&nbsp;
             <img src="Images\profile.png" alt="profile" id="profile">
             <div id="name">John doe</div>
             <img src="Images\downward-arrow.svg" alt="aerrow" id="aerrow">
@@ -76,7 +76,7 @@
             <div id="Graph">
             <div id="saletxt"> <span> Sale </span></div>
             
-            <div ><span id="wtxt">Weekly &nbsp;&nbsp;&nbsp; Monthly</span>  <span id="ytxt">Yearly</span></div>
+            <div ><span id="wtxt">Weekly &nbsp;&nbsp;&nbsp; Monthly</span> <span id="ytxt">Yearly</span></div>
 
 
             
