--- a/innerpage.html
+++ b/innerpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Inner page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 
 <body>
@@ -26,11 +26,11 @@
 
         </div>
         <div class="innerpagesidebar">
-            <img src="Images\dashboard-active.svg" alt="deshboard" id="dashboard">
+            <div id="active"><img src="Images\dashboard-active.svg" alt="deshboard" id="dashboard">
                 <div id="dashtxt">Dashboard</div>
-            <div id="active1"></div><img src="Images\graph-default.svg" alt="graph" id="analysis">
-            <div id="anatxt">Analysis</div>
             </div>
+            <img src="Images\graph-default.svg" alt="graph" id="analysis">
+            <div id="anatxt">Analysis</div>
             <img src="Images\inbox-default.svg" alt="menubar" id="inbox">
             <div id="inbtxt">Inbox</div>
             <img src="Images\clock-default.svg" alt="menubar" id="history">
