--- a/dahsboard.html
+++ b/dahsboard.html
@@ -31,7 +31,7 @@
         </div>
         <div class="sidebar">
             <div id="active"><img src="Images\dashboard-active.svg" alt="deshboard" id="dashboard">
-            <div id="dashtxt">Dashboard</div>
+            <div id="dashtxt1">Dashboard</div>
             </div>
             <img src="Images\graph-default.svg" alt="graph" id="analysis">
             <div id="anatxt">Analysis</div>
