--- a/index.html
+++ b/index.html
@@ -4,35 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Dummy</title>
 </head>
 <body>
-    <div class="container">
-    <div class="row">
-        <div class="col-md-6">
+    <div class="container-fluid">
 
-    <img src="Images\hero-image.png" alt="hero-img" id="img1">
+            <img src="/images/hero-image.png" class ="main_image" alt="hero-image">
+
+            <div class="container2">
+                <img src="./images/logo.svg" class = "logo" alt="logo">
+                <p class = "discription">We are <strong class="color-red">experts</strong> in business, marketing, growth, & sales.</p>
+                <p class="titlelogin">Login into your account</p>
+                <input type="text" name="username" placeholder = "Username">
+                <input type="password" name="password" placeholder="Password">
+                <div class="container3">
+                    <button class="login-btn">Login</button>
+                    <span style="color:#ADADAD">Forgot password?</span>
+                </div>
+                <p style="color:#ADADAD">Are you a new member?<span class="color-red">Register here</span>
+            </div>
+        
     </div>
-
-    <div class="col-md-6">
-
-        <img src="Images\logo.svg" alt="hero-img" id="img2">
-        <h1 class="txt"> We are <strong id="exp">expert</strong> in business, marketing, growth, & sales.</h1>
-        <div class="login">Login into your account</div>
-        <div class="box1"> <h5 id="user">Username</h5></div>
-        <div class="box2"><h5 id="pass">Password</h5></div>
-        <div class="log"><p id="log2">Login</p></div>
-        <div class="fpass"><p>Forgot Password?</p></div>
-        <div class="new"><p id="new1">Are you a new Member?</p></div>
-        <div class="reg"><p id="reg1">Resister here</p></div>
-
-    </div>
-
-
-    </div>
-    
 </body>
 </html>
