--- a/innerpage.html
+++ b/innerpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Inner page</title>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -26,11 +26,12 @@
 
         </div>
         <div class="innerpagesidebar">
-            <div id="active"><img src="Images\dashboard-active.svg" alt="deshboard" id="dashboard">
-                <div id="dashtxt">Dashboard</div>
+            <img src="Images\dashboard-default.svg" alt="deshboard" id="dashboard2">
+            <div id="dashtxt2">Dashboard</div>
+
+            <div id="active2"><img src="Images\graph-active.svg" alt="graph" id="analysis2">
+                <div id="anatxt2">Analysis</div>
             </div>
-            <img src="Images\graph-default.svg" alt="graph" id="analysis">
-            <div id="anatxt">Analysis</div>
             <img src="Images\inbox-default.svg" alt="menubar" id="inbox">
             <div id="inbtxt">Inbox</div>
             <img src="Images\clock-default.svg" alt="menubar" id="history">
@@ -127,10 +128,73 @@
             <div id="fileupload"><span>File Upload</span></div>
             <form>
                 <div class="form-group">
-                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                    <div class="btn">
+                        <label for="exampleFormControlFile1">
+                            <img src="Images\cloud-upload-icon.svg" alt="cloud">
+                            <span id="up">Upload</span>
+                        </label>
+                    </div>
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1" hidden>
+                    <span id="item">No item Selected</span>
                 </div>
-              </form>
-              <div id="radio"><span>Radio Button</span></div>
+            </form>
+            <div id="radio"><span>Radio Button</span></div>
+            <div class="form-group-3">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                        value="option1">
+                    <label class="form-check-label" for="inlineRadio1">Option 1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                        value="option2" checked >
+                    <label class="form-check-label" for="inlineRadio2">Option 2</label>
+                </div>
+            </div>
+            <div id="checkbox"><span>Checkbox</span></div>
+            <div class="form-group-3">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                    <label class="form-check-label" for="inlineCheckbox1">Option 1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" checked>
+                    <label class="form-check-label" for="inlineCheckbox2" >Option 2</label>
+                </div>
+            </div>
+            <div id="snackbar"><span>Snackbar</span></div>
+            <div class="row">
+                <div class="col" id="column">
+                    <img src="Images\error-icon.svg" alt="error" id="error">
+                    <span id="errortxt">This is an error message</span>
+                </div>
+                <div class="col" id="column2">
+                    <img src="Images\info-icon.svg" alt="info" id="information">
+                    <span id="infotxt">This is an Information message!</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" id="column3">
+                    <img src="Images\warning-icon.svg" alt="warning" id="warning">
+                    <span id="warningtxt">This is a warning message!</span>
+                </div>
+                <div class="col" id="column4">
+                    <img src="Images\success-icon.svg" alt="Success" id="success">
+                    <span id="successtxt">This is an Success message</span>
+                </div>
+            </div>
+            <div id="action"><span>Call to action</span></div>
+            <div class="form-group-3">
+                <button type="button" class="btn1 btn-primary">Primary</button>
+                <button type="button" class="btn2 btn-secondary">Secondary</button>
+            </div>
+            <div id="tab"><span>Tabs</span></div>
+            <div class="tab">
+                <div style="color: #C8242F; border-bottom: 2px solid #C8242F;">Tab 1</div>
+                <div style="color: #ADADAD;">Tab 2</div>
+                <div style="color: #ADADAD;">Tab 3</div>
+            </div>
+            <p style="margin: 22px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
         </div>
     </div>
 
